--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-github-contribution-calendar": "^2.2.0",
     "react-icons": "^4.12.0"
   },
   "devDependencies": {
