--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/font": "^14.0.3",
     "@supabase/supabase-js": "^2.38.5",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
