--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@supabase/supabase-js": "^2.38.5",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "dexie": "^3.2.4",
+    "dexie-react-hooks": "^1.1.7",
     "formidable": "^3.5.1",
     "imagekit": "^4.1.4",
     "next": "14.0.3",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-dom": "^18",
     "react-github-contribution-calendar": "^2.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "short-unique-id": "^5.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
