--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18",
     "react-github-contribution-calendar": "^2.2.0",
     "react-icons": "^4.12.0",
-    "short-unique-id": "^5.0.3"
+    "short-unique-id": "^5.0.3",
+    "vector-storage": "^1.0.55"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
