--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.38.5",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tremor/react": "^3.12.1",
     "ai": "^2.2.30",
     "clsx": "^2.0.0",
@@ -18,6 +19,7 @@
     "dexie-react-hooks": "^1.1.7",
     "formidable": "^3.5.1",
     "imagekit": "^4.1.4",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.0.3",
     "openai": "^4.24.1",
     "react": "^18.2.0",
