--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.12.0",
     "react-markdown": "^9.0.1",
     "short-unique-id": "^5.0.3",
+    "sonner": "^1.3.1",
     "svg-loaders-react": "^2.2.1",
     "vector-storage": "^1.0.55"
   },
